--- a/src/apps/anglictina-intermediate-vety.yaml
+++ b/src/apps/anglictina-intermediate-vety.yaml
@@ -22,7 +22,7 @@ passive:
 pmodals:
 - {CZ: Měl/a jsem se na tu zkoušku učit víc, EN: I should have studied more for the exam}
 - {CZ: "Mohla se přidat k týmu, ale rozhodla se, že se nepřidá", EN: "She could have joined the team, but she decided not to"}
-- {CZ: "Mohli jít na koncert, ale nevím to jistě" EN: "They might have gone to the concert, but I'm not sure"}
+- {CZ: "Mohli jít na koncert, ale nevím to jistě", EN: "They might have gone to the concert, but I'm not sure"}
 
 templates:
 - ["[present:CZ].","[present:EN]."]
