--- a/src/apps/anglictina-intermediate-vety.yaml
+++ b/src/apps/anglictina-intermediate-vety.yaml
@@ -8,6 +8,7 @@ pperfect:
 
 pastperfect:  
 - {CZ: "Když dorazila na letiště, letadlo už odletělo, takže musela čekat na další dostupný let", EN: "By the time she arrived at the airport, the flight had already departed, so she had to wait for the next available flight"}
+- {CZ:" V době, když jsme dorazili na oslavu, zatímco v pozadí hrála hudba", EN: "By the time I arrived at the party, everyone had already eaten dinner and was chatting in the living room while music was playing in the background"}
 
 conditionals:
 - {CZ: "Když bude pršet, zůstanu doma", EN: "If it rains, I will stay inside"}
