--- a/src/apps/anglictina-intermediate-vety.yaml
+++ b/src/apps/anglictina-intermediate-vety.yaml
@@ -27,6 +27,11 @@ pmodals:
 - {CZ: "Mohla se přidat k týmu, ale rozhodla se, že se nepřidá", EN: "She could have joined the team, but she decided not to"}
 - {CZ: "Mohli jít na koncert, ale nevím to jistě", EN: "They might have gone to the concert, but I'm not sure"}
 
+either:
+- {CZ: "Buď můžeš jít s námi večer na oslavu, nebozůstat doma a dívat se na film. Je to na tobě" , EN: "You can either come with us to the party tonight or stay home and watch a movie, it's up to you"}
+- {CZ: "Ani červené tričko, ani to modré mi nepasovalo, tak jsem se rozhodl/a jít do jiného obchodu" , EN: "Neither the red shirt nor the blue one fit me properly, so I decided to try a different store."}
+- {CZ: "Můj pokoj je jak prostorný, tak praticky umístěný poblíž veřejné dopravy ", EN: "My new apartment is both spacious and conveniently located near public transportation."}
+
 templates:
 - ["[present:CZ].","[present:EN]."]
 - ["[pperfect:CZ].","[pperfect:EN]."]
@@ -34,3 +39,4 @@ templates:
 - ["[conditionals:CZ].","[conditionals:EN]."]
 - ["[passive:CZ].","[passive:EN]."]
 - ["[pmodals:CZ].","[pmodals:EN]."]
+- ["[either:CZ].","[either:EN]."]
