--- a/src/apps/anglictina-intermediate-vety.yaml
+++ b/src/apps/anglictina-intermediate-vety.yaml
@@ -32,6 +32,14 @@ either:
 - {CZ: "Ani červené tričko, ani to modré mi nepasovalo, tak jsem se rozhodl/a jít do jiného obchodu" , EN: "Neither the red shirt nor the blue one fit me properly, so I decided to try a different store."}
 - {CZ: "Můj pokoj je jak prostorný, tak praticky umístěný poblíž veřejné dopravy ", EN: "My new apartment is both spacious and conveniently located near public transportation."}
 
+soquestions:
+- {CZ: Kdo volal Johnovi, EN: Who phoned John}
+- {CZ: Kolik lidí navštívilo koncert, EN: How many people attended the concert}
+- {CZ: Co koupil Jeremy v Irsku, EN:  What did Jeremy buy in Ireland}
+- {CZ: Které auto dorazilo první, EN:	Which car arrived first}
+- {CZ: Kdo chodí do postele brzy, EN: Who goes to bed early?}
+
+
 templates:
 - ["[present:CZ].","[present:EN]."]
 - ["[pperfect:CZ].","[pperfect:EN]."]
@@ -40,3 +48,4 @@ templates:
 - ["[passive:CZ].","[passive:EN]."]
 - ["[pmodals:CZ].","[pmodals:EN]."]
 - ["[either:CZ].","[either:EN]."]
+- ["[soquestions:CZ].","[soquestions:EN]."]
