--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -158,7 +158,7 @@ both:
 - {CZ: "Ještě jsem ti neposlal ten odkaz, který jsi chtěl", EN: I haven't sent you the link you wanted}
 - {CZ: "Hodně se změnilo od té doby, co jsme se viděli naposledy", EN: A lot has changed since we last saw each other}
 - {CZ: "Nic se nezměnilo od té doby, kdy jste se ptali naposledy", EN: Nothing has changed since you last asked}
-- {CZ: "Nedívala se na televizi od té doby, co jsem koupila počítač",EN: I haven't watched TV since I bought a computer}
+- {CZ: "Nedívala jsem se na televizi od té doby, co jsem koupila počítač",EN: I haven't watched TV since I bought a computer}
 - {CZ: "Dočetl/a jsem tu knihu, co jsi mi včera půjčil/a",EN: I have finished the book that you lent me yesterday}
 - {CZ: "Pracoval jako učitel deset let, ale minulý týden dal výpověď",EN: but he quit his job last week}
 
