--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -161,6 +161,16 @@ both:
 - {CZ: "Nedívala jsem se na televizi od té doby, co jsem koupila počítač",EN: I haven't watched TV since I bought a computer}
 - {CZ: "Dočetl/a jsem tu knihu, co jsi mi včera půjčil/a",EN: I have finished the book that you lent me yesterday}
 - {CZ: "Pracoval jako učitel deset let, ale minulý týden dal výpověď",EN: but he quit his job last week}
+- {CZ: "Koupila jsem si nové auto, ale od té doby, co jsem ho dostala, jsem ještě nevyjela na dlouhou cestu.", EN: "I bought a new car, but since I received it, I haven't gone on a long trip yet."}
+- {CZ: "Chodila jsem každý den do kavárny, ale od té doby, co jsem začala vařit doma, jsem si ušetřila spoustu peněz.", EN: "I used to go to the café every day, but since I started cooking at home, I have saved a lot of money."}
+- {CZ: "Navštívili jsme mnoho zemí během našich cestování, ale od té doby, co jsme zůstali doma, jsme mnoho zážitků neměli.", EN: "We visited many countries during our travels, but since we stayed home, we haven't had many experiences."}
+- {CZ: "Trénovala jsem pilates pravidelně, ale od té doby, co jsem začala pracovat více hodin, nemám na to čas.", EN: "I used to do pilates regularly, but since I started working more hours, I haven't had time for it."}
+- {CZ: "Hrávali jsme spolu v kapele a nahráli jsme několik písniček, ale od té doby, co jsme se rozešli, jsme se už spolu na pódiu neobjevili.", EN: "We used to play together in a band and recorded several songs, but since we broke up, we haven't performed together on stage."}
+- {CZ: "Cestovala jsem do mnoha exotických destinací a zažila jsem spoustu dobrodružství, ale od té doby, co jsem se usadila, mám více času na rodinu.", EN: "I traveled to many exotic destinations and had many adventures, but since I settled down, I have more time for my family."}
+- {CZ: "Sledovala jsem každou epizodu tohoto seriálu, ale od té doby, co jsem začala číst knihy, jsem na něj zapomněla.", EN: "I watched every episode of that TV series, but since I started reading books, I forgot about it."}
+- {CZ: "V minulém roce jsem absolvovala několik kurzů a získala jsem nové dovednosti, ale od té doby, co jsem našla novou práci, jsem se naučila je uplatňovat.", EN: "Last year, I took several courses and acquired new skills, but since I found a new job, I have learned how to apply them."}
+- {CZ: "Chodívala jsem do fitka, abych zlepšila svoji kondici, ale od té doby, co jsem začala cvičit jógu, jsem se cítila mnohem lépe.", EN: "I used to go to the gym to improve my fitness, but since I started practicing yoga, I have felt much better."}
+- {CZ: "Dříve jsem pracovala ve velké korporaci a pracovala jsem dlouhé hodiny, ale od té doby, co jsem začala pracovat jako freelancer, mám větší flexibilitu.", EN: "I used to work in a large corporation and worked long hours, but since I started working as a freelancer, I have more flexibility."}
 
 
 questions:
