--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -179,7 +179,7 @@ both:
 - {CZ: "Cestovala jsem do mnoha exotických destinací a zažila jsem spoustu dobrodružství, ale od té doby, co jsem se usadila, mám více času na rodinu", EN: "I traveled to many exotic destinations and had many adventures, but since I settled down, I have more time for my family"}
 - {CZ: "Sledovala jsem každou epizodu tohoto seriálu, ale od té doby, co jsem začala číst knihy, jsem na něj zapomněla", EN: "I watched every episode of that TV series, but since I started reading books, I forgot about it"}
 - {CZ: "V minulém roce jsem absolvovala několik kurzů a získala jsem nové dovednosti, ale od té doby, co jsem našla novou práci, jsem se naučila je uplatňovat", EN: "Last year, I took several courses and acquired new skills, but since I found a new job, I have learned how to apply them"}
-- {CZ: "Chodívala jsem do fitka, abych zlepšila svoji kondici, ale od té doby, co jsem začala cvičit jógu, jsem se cítila mnohem lépe", EN: "I used to go to the gym to improve my fitness, but since I started practicing yoga, I have felt much better"}
+- {CZ: "Chodívala jsem do fitka, abych zlepšila svoji kondici, ale od té doby, co jsem začala cvičit jógu, se cítím mnohem lépe", EN: "I used to go to the gym to improve my fitness, but since I started practicing yoga, I have felt much better"}
 - {CZ: "Dříve jsem pracovala ve velké korporaci a pracovala jsem dlouhé hodiny, ale od té doby, co jsem začala pracovat jako freelancer, mám větší flexibilitu", EN: "I used to work in a large corporation and worked long hours, but since I started working as a freelancer, I have more flexibility"}
 
 
