--- a/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
+++ b/src/apps/anglictina-predpritomny-minuly-prosty-cas.yaml
@@ -162,7 +162,7 @@ twopasts:
 - {CZ: Ztratila klíče a někdo je našel a vrátil je, EN: She lost her keys and somebody found them and returned them}
 - {CZ: "Včera viděli tu knihu ve knihkupectví, ale nekoupili ji", EN: "Yesterday, they saw that book in the bookstore, but they didn't buy it"}
 - {CZ: "Když byli malí, hrávali na klavír každý den", EN: "When they were little, they used to play the piano every day"}
-- {CZ: "Šli do kina, ale film se jim nelíbil", EN: " They Went to the cinema, but they didn't like the movie"}
+- {CZ: "Šli do kina, ale film se jim nelíbil", EN: " They went to the cinema, but they didn't like the movie"}
 - {CZ: "Před rokem navštívili Paříž a strávili tam celý týden", EN: " They visited Paris a year ago and they spent a whole week there"}
 
 both:
