--- a/src/apps/anglictina-intermediate-vety.yaml
+++ b/src/apps/anglictina-intermediate-vety.yaml
@@ -4,6 +4,7 @@ present:
 
 past:
 - {CZ: "Když jsem vařil/a večeři, zazvonil telefon a rychle jsem ho vzal/a", EN: "While I was cooking dinner, the phone rang, and I quickly answered it"}
+- {CZ: "- {CZ: Když jsem vařil/a večeři, zazvonil telefon a rychle jsem ho vzal/a, EN: He found his lost keys in the living room yesterday}
 
 pperfect:
 - {CZ: Právě dočetl nejnovější knihu od svého oblíbeného autora, EN: He has just finished reading the latest novel by his favorite author}
