--- a/src/templates/footer.2.html.template
+++ b/src/templates/footer.2.html.template
@@ -1,12 +1,26 @@
-    <div id="contact">
-      <b>Kontakt</b><br>
-      <p>Mgr. Monika Šístková<br/>
-         Zlochova 2193/1<br/>
-         143 00 Praha 4 - Modřany
-      </p>
-      <p>monika.sistkova@gmail.com</p>
-      <p><a href="tel:+420724559267">+420 724 559 267</a></p>
-    </div>
+html
+Copy code
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    /* Styly pro červené telefonní číslo */
+    #contact .phone {
+      color: red; /* Nastavení červené barvy */
+    }
+  </style>
+</head>
+<body>
+  <div id="contact">
+    <b>Kontakt</b><br>
+    <p>Mgr. Monika Šístková<br/>
+       Zlochova 2193/1<br/>
+       143 00 Praha 4 - Modřany
+    </p>
+    <p>monika.sistkova@gmail.com</p>
+    <p><span class="phone">&#9742;</span> <a href="tel:+420724559267" class="phone">+420 724 559 267</a></p>
   </div>
 </body>
 </html>
