--- a/src/templates/footer.2.html.template
+++ b/src/templates/footer.2.html.template
@@ -15,7 +15,11 @@
     #contact .email {
       color: white; /* Nastavení bílé barvy */
       text-decoration: none; /* Odstranění podtržení */
-      font-size: 0.8em; /* Zmenšení písma */
+      font-size: 1em; /* Velikost písma */
+      max-width: 200px; /* Maximální šířka, aby se vešlo */
+      overflow: hidden; /* Přetečení skryté */
+      white-space: nowrap; /* Nezlomit řádek */
+      text-overflow: ellipsis; /* Zobrazení "..." při přetečení */
     }
   </style>
 </head>
