--- a/src/templates/footer.2.html.template
+++ b/src/templates/footer.2.html.template
@@ -5,9 +5,7 @@
        143 00 Praha 4 - Modřany
     </p>
     <p>
-      <a href="tel:+420724559267">+420 724 559 267</a>
-    </p>
-    <p>
+      <a href="tel:+420724559267">+420 724 559 267</a><br/>
       <a href="mailto:monika.sistkova@gmail.com">monika.sistkova@gmail.com</a>
     </p>
   </div>
