--- a/src/templates/footer.2.html.template
+++ b/src/templates/footer.2.html.template
@@ -1,5 +1,5 @@
   <div id="contact">
-    <b>Kontakt</b><br>
+    <b>Kontaktujte mě:</b><br>
     <p>Mgr. Monika Šístková<br/>
        Zlochova 2193/1<br/>
        143 00 Praha 4 - Modřany
