--- a/src/templates/footer.2.html.template
+++ b/src/templates/footer.2.html.template
@@ -1,7 +1,7 @@
   <div id="contact">
   <p>
   <p>
-    <b>Kontaktujte mě:</b><br>
+    <b>Kontaktujte mě kliknutím na tel.číslo nebo email:</b><br>
   <p>
       <a href="tel:+420724559267">+420 724 559 267</a><br/>
       <a href="mailto:monika.sistkova@gmail.com">monika.sistkova@gmail.com</a></p>
