--- a/src/templates/footer.2.html.template
+++ b/src/templates/footer.2.html.template
@@ -7,7 +7,8 @@
     <p>
      <p>Mgr. Monika Šístková<br/>
        Zlochova 2193/1<br/>
-       143 00 Praha 4 - Modřany
+        Praha 4 - Modřany
+           143 00
     </p>
   </div>
 </body>
