--- a/src/templates/footer.2.html.template
+++ b/src/templates/footer.2.html.template
@@ -7,7 +7,7 @@
     <p>
      <p>Mgr. Monika Šístková<br/>
        Zlochova 2193/1<br/>
-        Praha 4 - Modřany   
+        Praha 4 - Modřany<br/>   
     </p>
   </div>
 </body>
