--- a/src/templates/footer.2.html.template
+++ b/src/templates/footer.2.html.template
@@ -2,7 +2,7 @@
   <p>
     <b>Kontaktujte mě a domluvíme se na první lekci:</b><br>
   <p>
-      <a href="mailto:monika.sistkova@gmail.com">monika.sistkova@gmail.com</a></p>
+      <a href="mailto:monika.sistkova@gmail.com">monika.sistkova@gmail.com</a>
       <a href="tel:+420724559267">+420 724 559 267</a><br/>
     <p>
      <p>Mgr. Monika Šístková<br/>
