--- a/src/templates/footer.2.html.template
+++ b/src/templates/footer.2.html.template
@@ -7,7 +7,8 @@
     <p>
      <p>Mgr. Monika Šístková<br/>
        Zlochova 2193/1<br/>
-        Praha 4 - Modřany<br/>   
+        Praha 4 <br/>  
+        Modřany <br/> 
     </p>
   </div>
 </body>
